# aquarius-cantina-fv

./: README.md  Report.md
Example_Submissions/BenRai1/fees_collector/: Cargo.toml  certora_build.py
Example_Submissions/BenRai1/fees_collector/confs/: 5_bitwise.conf  accesscontrol_5_bitwise_5_verified.conf  accesscontrol_5_bitwise_5_verified.conf.orig  accesscontrol_5_bitwise_6_verified.conf  accesscontrol_5_bitwise_6_verified.conf.orig  accesscontrol_5_bitwise_7_verified.conf  accesscontrol_5_bitwise_7_verified.conf.orig  accesscontrol_5_bitwise_8_verified.conf  accesscontrol_5_bitwise_8_verified.conf.orig  accesscontrol_5_bitwise_9_verified.conf  accesscontrol_5_bitwise_9_verified.conf.orig  accesscontrol_5_loop_verified.conf  accesscontrol_5_loop_verified.conf.orig  feescollector_5_bitwise_10_verified.conf  feescollector_5_bitwise_10_verified.conf.orig  feescollector_5_bitwise_11_verified.conf  feescollector_5_bitwise_11_verified.conf.orig  feescollector_5_bitwise_12_verified.conf  feescollector_5_bitwise_12_verified.conf.orig  feescollector_5_bitwise_13_verified.conf  feescollector_5_bitwise_13_verified.conf.orig  feescollector_5_bitwise_1_solo_verified.conf  feescollector_5_bitwise_1_verified.conf  feescollector_5_bitwise_1_verified.conf.orig  feescollector_5_bitwise_2_verified.conf  feescollector_5_bitwise_2_verified.conf.orig  feescollector_5_bitwise_3_verified.conf  feescollector_5_bitwise_3_verified.conf.orig  feescollector_5_bitwise_4_verified.conf  feescollector_5_bitwise_4_verified.conf.orig  feescollector_starter_verified_5_verified.conf  test.conf  (+3 more)
(+137 files in other folders)
