[package]
name = "soroban-fees-collector-contract"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
certora = []

[dependencies]
soroban-sdk = { workspace = true }
access_control = { workspace = true, features = ["certora"]}
upgrade = { workspace = true }
utils = { workspace = true, features = ["certora"]}


cvlr = { workspace = true, default-features = false }
cvlr-soroban = { workspace = true }
cvlr-soroban-macros = { workspace = true }
cvlr-soroban-derive = { workspace = true }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
